# nonebot-plugin-course-schedule

./: pyproject.toml
nonebot_plugin_course_schedule/: __init__.py
nonebot_plugin_course_schedule/commands/: bind_schedule.py
